cleaning up state summary

--- a/summary/React/05. State.md
+++ b/summary/React/05. State.md
@@ -1,83 +1,69 @@
 # State
 
-> State
->
-> [Dynamic information](http://www.teach-ict.com/as_a2_ict_new/ocr/AS_G061/311_data_info_knowledge/static_dynamic_data/miniweb/pg4.htm) is information that can change.
->
-> React components will often need *dynamic information* in order to render. For example, imagine a component that displays the score of a basketball game. The score of the game might change over time, meaning that the score is *dynamic*. Our component will have to know the score, a piece of dynamic information, in order to render in a useful way.
->
-> There are two ways for a component to get dynamic information: `props` and `state`. Besides `props` and `state`, every value used in a component should always stay exactly the same.
->
-> You just spent a long lesson learning about `props`. Now it’s time to learn about `state`. `props` and `state` are all that you need to set up an ecosystem of interacting React components.
+State is [Dynamic information](http://www.teach-ict.com/as_a2_ict_new/ocr/AS_G061/311_data_info_knowledge/static_dynamic_data/miniweb/pg4.htm) that can change. React components will often need *dynamic information* in order to render. 
 
-> Unlike `props`, a component’s `state` is *not* passed in from the outside. A component decides its own `state`.
->
-> To make a component have `state`, give the component a `state` property. This property should be declared inside of a constructor method, like this:
->
-> ```jsx
-> class Example extends React.Component {
->   constructor(props) {
->     super(props);
->     this.state = { mood: 'decent' };
->   }
-> // rest omitted
-> ```
+There are two ways for a component to get dynamic information: `props` and `state`. Besides `props` and `state`, every value used in a component should always stay exactly the same. Unlike `props`, a component’s `state` is *not* passed in from the outside. A component decides its own `state`. To make a component have `state`, give the component a `state` property. This property should be declared inside of a constructor method, like this:
+
+```jsx
+class Example extends React.Component {
+     constructor(props) {
+     super(props);
+     this.state = { mood: 'decent' };
+}
+// rest omitted
+```
 
 ## Accessing State
 
-> To *read* a component’s `state`, use the expression `this.state.name-of-property`:
->
-> ```jsx
-> class App extends React.Component {
->   constructor(props) {
->     super(props);
->     this.state = { title: 'Best App' };
->   }
->   render() { return (<h1>{this.state.title}</h1>); }
-> }
-> ```
+To *read* a component’s `state`, use the expression `this.state.name-of-property`:
+
+ ```jsx
+class App extends React.Component {
+	constructor(props) {
+	super(props);
+    this.state = { title: 'Best App' };
+    }
+    render() { return (<h1>{this.state.title}</h1>); }
+}
+```
 
 ## Changing State
 
-> A component can also *change* its own state by calling the function `this.setState()`
->
-> ```JSX
-> this.setState({ hungry: true });
-> ```
+A component can also *change* its own state by calling the function `this.setState()`
+
+```JSX
+this.setState({ hungry: true });
+```
 
 ## Calling this.setState from another function
 
-> The most common way to call `this.setState()` is to call a custom function that *wraps* a `this.setState()` call. 
->
-> This wrapper function must be bound in the constructor to this
->
-> ```jsx
-> class Mood extends React.Component {
->   constructor(props) {
->     super(props);
->     this.state = { mood: 'good' };
->     //  binding the wrapper function
->     this.toggleMood = this.toggleMood.bind(this);
->   }
->   // the wrapper function
->   toggleMood() {
->     const newMood = this.state.mood == 'good' ? 'bad' : 'good';
->     this.setState({ mood: newMood });
->   }
->   // passing the wrapper function
->   render() { return (<button onClick={this.toggleMood}> Click Me</button>); }
-> }
-> ```
+The most common way to call `this.setState()` is to call a custom function that *wraps* a `this.setState()` call. This wrapper function must be bound in the constructor to `this`
+
+```jsx
+class Mood extends React.Component {
+    constructor(props) {
+        super(props);
+        this.state = { mood: 'good' };
+        //  binding the wrapper function
+		this.toggleMood = this.toggleMood.bind(this);
+    }
+   // the wrapper function
+    toggleMood() {
+		const newMood = this.state.mood == 'good' ? 'bad' : 'good';
+		this.setState({ mood: newMood });
+    }
+    // passing the wrapper function
+    render() { return (<button onClick={this.toggleMood}> Click Me</button>); }
+}
+```
 
 ## state changes call render
 
-> *Any time that you call this.setState(), this.setState() AUTOMATICALLY calls .render() as soon as the state has changed.*
->
-> *That* is why you can’t call `this.setState()` from inside of the `.render()` method! `this.setState()` *automatically* calls `.render()`. If `.render()` calls `this.setState()`, then an infinite loop is created.
+Any time that you call this.setState(), this.setState() AUTOMATICALLY calls .render() as soon as the state has changed. *That* is why you can’t call `this.setState()` from inside of the `.render()` method! `this.setState()` *automatically* calls `.render()`. If `.render()` calls `this.setState()`, then an infinite loop is created.
 
 ## Project Random Color Picker
 
-> This program will set the screen’s background to a random color. Clicking a button will refresh to a new, random color.
+This program will set the screen’s background to a random color. Clicking a button will refresh to a new, random color.
 
 **Random.js**
 
@@ -88,44 +74,43 @@ import ReactDOM from 'react-dom';
 import { Button } from './Button'
 
 class Random extends React.Component {
-  // step 1: constructor with state of color
-  constructor(props) {
-    super(props);
-    this.state = { color: [15, 125, 125] };
-    // step 9. bind the handleClick wrapper function
-    this.handleClick = this.handleClick.bind(this);
-  }
+    // step 1: constructor with state of color
+    constructor(props) {
+    	super(props);
+    	this.state = { color: [15, 125, 125] };
+    	// step 9. bind the handleClick wrapper function
+    	this.handleClick = this.handleClick.bind(this);
+    }
 
-  // Step 8, wrapper function handleCLick for the button
-  handleClick() { this.setState({color: this.chooseColor()}) }
+    // Step 8, wrapper function handleCLick for the button
+    handleClick() { this.setState({color: this.chooseColor()}) }
 
-  // Provided functions
-  componentDidMount() {this.applyColor()}
-  componentDidUpdate(prevProps, prevState) {this.applyColor()}
-  formatColor(ary) {return 'rgb(' + ary.join(', ') + ')'}
-  isLight() {return this.state.color.reduce((a,b) => a+b) < 127 * 3}
-  applyColor() {document.body.style.background = this.formatColor(this.state.color)}
-  chooseColor() {
-    const random = [];
-    for (let i = 0; i < 3; i++) { random.push(Math.floor(Math.random()*256))}
-    return random;
-  }
+    // Provided functions
+    componentDidMount() {this.applyColor()}
+    componentDidUpdate(prevProps, prevState) {this.applyColor()}
+    formatColor(ary) {return 'rgb(' + ary.join(', ') + ')'}
+    isLight() {return this.state.color.reduce((a,b) => a+b) < 127 * 3}
+    applyColor() {document.body.style.background = this.formatColor(this.state.color)}
+    chooseColor() {
+    	const random = [];
+    	for (let i = 0; i < 3; i++) { random.push(Math.floor(Math.random()*256))}
+        return random;
+    }
 
-  // step 3. show the color in the H1 tags
-  // step 4, use formatColor
-  // step 10, pass the handler as a prop to Button
-  render() {
-    return (
-      <div>
-        <h1 className={this.isLight() ? 'white' : 'black'}>
-          Your color is {this.formatColor(this.state.color)}
-        </h1>
-        <Button light={this.isLight()} onClick={this.handleClick}/>
-      </div>
-    );
-  }
+    // step 3. show the color in the H1 tags
+    // step 4, use formatColor
+    // step 10, pass the handler as a prop to Button
+    render() {
+        return (
+        <div>
+          <h1 className={this.isLight() ? 'white' : 'black'}>
+            Your color is {this.formatColor(this.state.color)}
+          </h1>
+          <Button light={this.isLight()} onClick={this.handleClick}/>
+        </div>
+    	);
+  	}
 }
-
 ReactDOM.render(<Random />, document.getElementById('app'));
 ```
 
@@ -148,4 +133,3 @@ export class Button extends React.Component {
 	}
 }
 ```
-
