cleaning up 06 state vs stateless

--- a/summary/React/06. State vs Stateless.md
+++ b/summary/React/06. State vs Stateless.md
@@ -1,37 +1,30 @@
 # State vs Stateless
 
-> Our programming pattern uses two React components: a *stateful* component, and a *stateless* component. “Stateful” describes any component that has a `state` property; “stateless” describes any component that does not.
->
-> In our pattern, a *stateful* component passes its `state` down to a *stateless* component
+This programming pattern uses two React components: a *stateful* component, and a *stateless* component. “Stateful” describes any component that has a `state` property; “stateless” describes any component that does not. In this pattern, a *stateful* component passes its `state` down to a *stateless* component
 
 ## Passing down information via props
 
-> `Child` is going to receive a `prop` called `name`, and display that `prop` on the screen.
->
-> How can you make a component *display* a `prop` called `name`?
->
-> - To access a `prop`, use the expression `this.props.name-of-prop`.
-> - To make a component *display* something, include that thing in the render function’s `return` statement.
->
-> You need to include `this.props.name` inside of `Child`‘s render function’s `return` statement.
->
-> A `<Parent />` is going to pass a `prop` to a `<Child />`
->
-> That means that a `<Parent />` is going to *render* a `<Child />`. Rendering is the only way for a component to pass `props` to another component.
+1. A `Child` is going to receive a `prop` called `name`, and display that `prop` on the screen.
+   - To access a `prop`, use the expression `this.props.name-of-prop`.
+   - To make a component *display* something, include `this.props.name` inside of `Child`‘s render function’s `return` statement.
 
-Child.js
+2. A `<Parent />` is going to pass a `prop` to a `<Child />`. That means that a `<Parent />` is going to *render* a `<Child />`. Rendering is the only way for a component to pass `props` to another component.
+
+**Example Code**
+
+Child.js:
 
 ```jsx
 import React from 'react';
 
 export class Child extends React.Component {
-  render() {
-    return <h1>Hey, my name is {this.props.name}!</h1>;
-  }
+    render() {
+        return <h1>Hey, my name is {this.props.name}!</h1>;
+    }
 }
 ```
 
-Parent.js
+Parent.js:
 
 ```jsx
 import React from 'react';
@@ -39,22 +32,22 @@ import ReactDOM from 'react-dom';
 import { Child } from './Child'
 
 class Parent extends React.Component {
-  constructor(props) {
-    super(props);
-    this.state = { name: 'Frarthur' };
-  }
+    constructor(props) {
+        super(props);
+        this.state = { name: 'Frarthur' };
+    }
 
-  render() {
-    return <Child name={this.state.name} />;
-  }
+    render() {
+        return <Child name={this.state.name} />;
+    }
 }
 
 ReactDOM.render(<Parent />, document.getElementById('app'))
 ```
 
-> **A React component should use `props` to store information that can be changed, but can only be changed by a \*different\* component.**
->
-> **A React component should use `state` to store information that the component itself can change.**
+
+- **A React component should use `props` to store information that can be changed, but can only be changed by a \*different\* component.**
+- **A React component should use `state` to store information that the component itself can change.**
 
 ## How to change the state
 
@@ -62,7 +55,9 @@ ReactDOM.render(<Parent />, document.getElementById('app'))
 - The Parent will have to define the function, and bind it in the constructor
 - The Child will call on the function via this.prop.name (in the example `this.prop.onClick`)
 
-Parent.js
+**Example Code**
+
+Parent.js:
 
 ```jsx
 import React from 'react';
@@ -70,52 +65,48 @@ import ReactDOM from 'react-dom';
 import { ChildClass } from './ChildClass';
 
 class ParentClass extends React.Component {
-  constructor(props) {
-    super(props);
+    constructor(props) {
+        super(props);
 
-    this.state = { totalClicks: 0 };
-	// binding the function
-    this.handleClick = this.handleClick.bind(this);
-  }
+        this.state = { totalClicks: 0 };
+        // binding the function
+        this.handleClick = this.handleClick.bind(this);
+    }
 
-  handleClick() {
-    const total = this.state.totalClicks;
+    handleClick() {
+        const total = this.state.totalClicks;
 
-    // calling handleClick will 
-    // result in a state change:
-    this.setState(
-      { totalClicks: total + 1 }
-    );
-  }
+        // calling handleClick will 
+        // result in a state change:
+        this.setState(
+            { totalClicks: total + 1 }
+        );
+    }
 
-  // The stateful component class passes down
-  // handleClick to a stateless component class:
-  render() {
-    return (
-      <ChildClass onClick={this.handleClick} />
-    );
-  }
+    // The stateful component class passes down
+    // handleClick to a stateless component class:
+    render() {
+        return <ChildClass onClick={this.handleClick} />;
+    }
 }
 ```
 
-Child.js
+Child.js:
 
 ```jsx
 import React from 'react';
 import ReactDOM from 'react-dom';
 
 export class ChildClass extends React.Component {
-  render() {
-    return (
-      // The stateless component class uses
-      // the passed-down handleClick function,
-      // accessed here as this.props.onClick,
-      // as an event handler:
-      <button onClick={this.props.onClick}>
-        Click Me!
-      </button>
-    );
-  }
+    render() {
+        return (
+            // The stateless component class uses
+            // the passed-down handleClick function,
+            // accessed here as this.props.onClick,
+            // as an event handler:
+            <button onClick={this.props.onClick}>Click Me!</button>
+        );
+    }
 }
 ```
 
@@ -123,7 +114,9 @@ export class ChildClass extends React.Component {
 
 To also pass information back to the parent we need a helper function in the child class.
 
-Parent.js
+**Example Code**
+
+Parent.js:
 
 ```jsx
 import React from 'react';
@@ -131,73 +124,59 @@ import ReactDOM from 'react-dom';
 import { Child } from './Child';
 
 class Parent extends React.Component {
-  constructor(props) {
-    super(props);
+    constructor(props) {
+        super(props);
 
-    this.state = { name: 'Frarthur' };
-    this.changeName = this.changeName.bind(this);
-  }
+        this.state = { name: 'Frarthur' };
+        this.changeName = this.changeName.bind(this);
+    }
 
-  changeName(newName) {
-    this.setState({
-      name: newName
-    });
-  }
+    changeName(newName) { this.setState({ name: newName }) };
 
-  render() {
-    return <Child name={this.state.name} onChange={this.changeName}/>
-  }
+    render() {
+        return <Child name={this.state.name} onChange={this.changeName}/>;
+    }
 }
 
 ReactDOM.render(
-	<Parent />,
-	document.getElementById('app')
+        <Parent />,
+        document.getElementById('app')
 );
 ```
 
-child.js
+Child.js:
 
 ```jsx
 import React from 'react';
 
 export class Child extends React.Component {
-  // add a constructor
-  constructor(props) {
-    super(props);
-    // binding the function
-    this.handleChange = this.handleChange.bind(this);
-  }
+    // add a constructor
+    constructor(props) {
+        super(props);
+        // binding the function
+        this.handleChange = this.handleChange.bind(this);
+    }
 
-  // call this function whenever the name in the select field changes
-  handleChange(e) {
-    // get the name from the event
-    const name = e.target.value;
-    // call the onChange passed down via props
-    this.props.onChange(name);
-  }
+    // call this function whenever the name in the select field changes
+    handleChange(e) {
+        // get the name from the event
+        const name = e.target.value;
+        // call the onChange passed down via props
+        this.props.onChange(name);
+    }
 
-  render() {
-    return (
-      <div>
-        <h1>
-          Hey my name is {this.props.name}!
-        </h1>
-        <select id="great-names" onChange={this.handleChange} >
-          <option value="Frarthur">
-            Frarthur
-          </option>
-
-          <option value="Gromulus">
-            Gromulus
-          </option>
-
-          <option value="Thinkpiece">
-            Thinkpiece
-          </option>
-        </select>
-      </div>
-    );
-  }
+    render() {
+        return (
+            <div>
+                <h1>Hey my name is {this.props.name}!</h1>
+                <select id="great-names" onChange={this.handleChange} >
+                    <option value="Frarthur">Frarthur</option>
+                    <option value="Gromulus">Gromulus</option>
+                    <option value="Thinkpiece">Thinkpiece</option>
+                </select>
+            </div>
+        );
+    }
 }
 ```
 
@@ -207,6 +186,10 @@ export class Child extends React.Component {
 - one child will get a select box with a prop function to change the name
 - the sibling will get a prop with the name
 
+**Example Code**
+
+Parent.js:
+
 ```jsx
 import React from 'react';
 import ReactDOM from 'react-dom';
@@ -214,86 +197,79 @@ import { Child } from './Child';
 import { Sibling } from './Sibling';
 
 class Parent extends React.Component {
-  constructor(props) {
-    super(props);
+    constructor(props) {
+        super(props);
+        this.state = { name: 'Frarthur' };
+        this.changeName = this.changeName.bind(this);
+    }
 
-    this.state = { name: 'Frarthur' };
+    changeName(newName) { this.setState({ name: newName }) };
 
-    this.changeName = this.changeName.bind(this);
-  }
-
-  changeName(newName) {
-    this.setState({
-      name: newName
-    });
-  }
-
-  render() {
-    return (
-      <div>
-        <Child onChange={this.changeName} />
-        <Sibling name={this.state.name} />
-      </div>
-    );
-  }
+    render() {
+        return (
+            <div>
+                <Child onChange={this.changeName} />
+                <Sibling name={this.state.name} />
+            </div>
+        );
+    }
 });
 
 ReactDOM.render(
-  <Parent />,
-  document.getElementById('app')
+    <Parent />,
+    document.getElementById('app')
 );
 ```
 
-Child.js
+Child.js:
 
 ```jsx
 import React from 'react';
 
 export class Child extends React.Component {
-  constructor(props) {
-    super(props);
+    constructor(props) {
+        super(props);
 
-    this.handleChange = this.handleChange.bind(this);
-  }
+        this.handleChange = this.handleChange.bind(this);
+    }
 
-  handleChange(e) {
-    const name = e.target.value;
-    this.props.onChange(name);
-  }
+    handleChange(e) {
+        const name = e.target.value;
+        this.props.onChange(name);
+    }
 
-  render() {
-    return (
-      <div>
-        <select
-          id="great-names"
-          onChange={this.handleChange}>
-
-          <option value="Frarthur">Frarthur</option>
-          <option value="Gromulus">Gromulus</option>
-          <option value="Thinkpiece">Thinkpiece</option>
-        </select>
-      </div>
-    );
-  }
+    render() {
+        return (
+            <div>
+                <select
+                    id="great-names"
+                    onChange={this.handleChange}>
+                    <option value="Frarthur">Frarthur</option>
+                    <option value="Gromulus">Gromulus</option>
+                    <option value="Thinkpiece">Thinkpiece</option>
+                </select>
+            </div>
+        );
+    }
 }
 ```
 
-sibling.js
+sibling.js:
 
 ```jsx
 import React from 'react';
 
 export class Sibling extends React.Component {
-  render() {
-    const name = this.props.name;
-    return (
-      <div>
-        <h1>Hey, my name is {name}!</h1>
-        <h2>Don't you think {name} is the prettiest name ever?</h2>
-        <h2>Sure am glad that my parents picked {name}!</h2>
-      </div>
-    );
-  }
+    render() {
+        const name = this.props.name;
+        return (
+            <div>
+                <h1>Hey, my name is {name}!</h1>
+                <h2>Don't you think {name} is the prettiest name ever?</h2>
+                <h2>Sure am glad that my parents picked {name}!</h2>
+            </div>
+        );
+    }
 }
 ```
 
