cleaning up 06 state vs stateless code examples

--- a/summary/React/06. State vs Stateless.md
+++ b/summary/React/06. State vs Stateless.md
@@ -138,10 +138,7 @@ class Parent extends React.Component {
     }
 }
 
-ReactDOM.render(
-        <Parent />,
-        document.getElementById('app')
-);
+ReactDOM.render(<Parent />, document.getElementById('app'));
 ```
 
 Child.js:
@@ -215,10 +212,7 @@ class Parent extends React.Component {
     }
 });
 
-ReactDOM.render(
-    <Parent />,
-    document.getElementById('app')
-);
+ReactDOM.render(<Parent />, document.getElementById('app'));
 ```
 
 Child.js:
