summary update, props added

--- a/summary/React/03. Components.md
+++ b/summary/React/03. Components.md
@@ -83,4 +83,34 @@ ReactDOM.render(<MyComponentClass />, document.getElementById('app'));
 
 ## Components rendering other components
 
-To u
+A component can render another component. For this to be possible the component must be visible. This can be done in two ways.
+
+1. Importing the component via `import { component } from 'file-or-library'`
+2. Declaring the component in the same file
+
+**Example**
+
+```jsx
+import React from 'react';
+import ReactDOM from 'react-dom';
+import { NavBar } from './NavBar.js';
+
+class ProfilePage extends React.Component {
+    render() {
+        return (
+            <div>
+              <NavBar />
+		     <!-- content -->
+            </div>
+        );
+    }
+}
+ReactDOM.render(<ProfilePage />, document.getElementById('app'))
+```
+
+When importing a component from another file that component must be exported in that file. In Navbar.js the Navbar is defined like this:
+
+```jsx
+export class NavBar extends React.Component { /* class definition */ }
+```
+
