--- a/summary/React/05. State.md
+++ b/summary/React/05. State.md
@@ -65,7 +65,7 @@ Any time that you call this.setState(), this.setState() AUTOMATICALLY calls .ren
 
 This program will set the screen’s background to a random color. Clicking a button will refresh to a new, random color.
 
-**Random.js**
+**Random.js:**
 
 ```jsx
 import React from 'react';
@@ -114,7 +114,7 @@ class Random extends React.Component {
 ReactDOM.render(<Random />, document.getElementById('app'));
 ```
 
-**Button.js**
+**Button.js:**
 
 ```jsx
 import React from 'react';
@@ -126,8 +126,8 @@ export class Button extends React.Component {
         return (
             <button 
                 onClick={this.props.onClick}
-               className={ this.props.light ? 'light-button' : 'dark-button' }>
-               Refresh
+                className={ this.props.light ? 'light-button' : 'dark-button' }>
+                Refresh
             </button>
         );
     }
