06 code slightly cleaned up

--- a/summary/React/06. State vs Stateless.md
+++ b/summary/React/06. State vs Stateless.md
@@ -18,9 +18,7 @@ Child.js:
 import React from 'react';
 
 export class Child extends React.Component {
-    render() {
-        return <h1>Hey, my name is {this.props.name}!</h1>;
-    }
+    render() { return <h1>Hey, my name is {this.props.name}!</h1> }
 }
 ```
 
@@ -37,9 +35,7 @@ class Parent extends React.Component {
         this.state = { name: 'Frarthur' };
     }
 
-    render() {
-        return <Child name={this.state.name} />;
-    }
+    render() { return <Child name={this.state.name} /> }
 }
 
 ReactDOM.render(<Parent />, document.getElementById('app'))
@@ -75,19 +71,14 @@ class ParentClass extends React.Component {
 
     handleClick() {
         const total = this.state.totalClicks;
-
         // calling handleClick will 
         // result in a state change:
-        this.setState(
-            { totalClicks: total + 1 }
-        );
+        this.setState( { totalClicks: total + 1 });
     }
 
     // The stateful component class passes down
     // handleClick to a stateless component class:
-    render() {
-        return <ChildClass onClick={this.handleClick} />;
-    }
+    render() { return <ChildClass onClick={this.handleClick} /> }
 }
 ```
 
@@ -133,9 +124,7 @@ class Parent extends React.Component {
 
     changeName(newName) { this.setState({ name: newName }) };
 
-    render() {
-        return <Child name={this.state.name} onChange={this.changeName}/>;
-    }
+    render() { return <Child name={this.state.name} onChange={this.changeName}/> }
 }
 
 ReactDOM.render(<Parent />, document.getElementById('app'));
