--- a/summary/React/03. Components.md
+++ b/summary/React/03. Components.md
@@ -88,7 +88,7 @@ A component can render another component. For this to be possible the component 
 1. Importing the component via `import { component } from 'file-or-library'`
 2. Declaring the component in the same file
 
-**Example**
+**Example Code**
 
 ```jsx
 import React from 'react';
@@ -112,5 +112,25 @@ When importing a component from another file that component must be exported in 
 
 ```jsx
 export class NavBar extends React.Component { /* class definition */ }
+```
+
+## Function Components
+
+In React, it is also possible to define components as JavaScript functions. Called *function components* to differentiate them from *class components*. In the latest versions of React, function components can do everything that class components can do. In most cases, however, function components offer a more elegant, concise way of creating React components. A function component does not have a render function, just a return statement with JSX.
+
+Like any component, function components can receive information via `props`. To access these `props`, give the function component a parameter named `props`. Within the function body access the props using this pattern: `props.propertyName`. There is no need to use the `this` keyword.
+
+**Example Code**
+
+```jsx
+export function Example (props) {
+    return (
+        <div>
+            <h1>{props.title}</h1>
+            <p>{props.name_prop_1}</p>
+	        <p>{props.name_prop_2}</p>
+            </div>
+    );
+}
 ```
 
